# gitnote

./: .gitignore
gitnote-api/: .env.example  .gitignore  Cargo.toml  Dockerfile  fly.toml
gitnote-api/.github/workflows/: deploy.yml
gitnote-api/src/: db.rs  error.rs  git.rs  handlers.rs  main.rs  models.rs
gitnote-api/src/web/: index.html
gitnote-ios/GitNote/: GitNoteApp.swift
gitnote-ios/GitNote.xcodeproj/: project.pbxproj
gitnote-ios/GitNote/Assets.xcassets/AccentColor.colorset/: Contents.json
gitnote-ios/GitNote/Assets.xcassets/AppIcon.appiconset/: Contents.json
gitnote-ios/GitNote/Models/: Page.swift
gitnote-ios/GitNote/Services/: APIClient.swift
gitnote-ios/GitNote/Views/: ContentView.swift  HistoryView.swift  PageEditorView.swift  PageListView.swift  SearchView.swift
